feat: website and documentation initial structural setup done

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,6 +2,7 @@
 *.d.ts
 .turbo
 .dockerignore
+.docusaurus
 .gitpod.Dockerfile
 templ.code-workspace
 dist
@@ -10,3 +11,5 @@ coverage
 output
 storybook-static
 third_party
+docs
+build
