--- a/.prettierignore
+++ b/.prettierignore
@@ -10,17 +10,20 @@
 .prettierignore
 .markdownlintignore
 .turbo
+.docusaurus
 .dockerignore
 .gitpod.Dockerfile
-dist/
-fixtures/
-_templates/
-coverage/
-node_modules/
-storybook-static/
+**/build/**
+dist/**
+fixtures/**
+_templates/**
+coverage/**
+node_modules/**
+storybook-static/**
+third_party/**
 package.json
 Dockerfile
 pnpm-lock.yaml
 pnpm-workspace.yaml
 templ.code-workspace
-third_party
+*.hbs
