--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "nr clean && nr deps:fresh && nr build && nr format && nr version && nr size-limit && nr lint && nr test",
+    "all": "nr clean && nr deps:fresh && nr build && nr docs:build && nr format && nr version && nr size-limit && nr lint && nr test",
     "build": "turbo run build --filter='./packages/*'",
     "clean": "rimraf .turbo .eslintcache .pnpm-store coverage && nr -r clean",
-    "cleanup": "nr -C scripts cleanup",
+    "clean:nm": "nr -C scripts clean:nm",
     "deps:fresh": "taze -r -w -i",
     "dev": "turbo run dev --filter='./packages/*'",
+    "docs:build": "turbo run docs:build",
     "eslint": "eslint --cache --fix .",
     "format": "prettier --write --cache .",
     "preinstall": "npx only-allow pnpm",
@@ -31,10 +32,10 @@
   },
   "sideEffects": true,
   "workspaces": [
-    "apps/*",
-    "docs/*",
-    "packages/*",
     "scripts",
+    "website",
+    "apps/*",
+    "packages/*",
     "third_party/*"
   ],
   "devDependencies": {
@@ -45,7 +46,7 @@
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
     "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
-    "@types/node": "^20.4.9",
+    "@types/node": "^20.4.10",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "@vitest/coverage-v8": "^0.34.1",
@@ -53,7 +54,7 @@
     "auto-changelog": "^2.4.0",
     "cspell": "^6.31.3",
     "envinfo": "^7.10.0",
-    "eslint": "^8.46.0",
+    "eslint": "^8.47.0",
     "eslint-define-config": "^1.23.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
