--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,16 @@ jobs:
       - name: Build
         run: pnpm run build
 
+  docs:build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-node
+      - name: Install
+        run: pnpm i --no-frozen-lockfile
+      - name: Build
+        run: pnpm run docs:build
+
   test:
     runs-on: ubuntu-latest
     steps:
