--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "sideEffects": true,
   "workspaces": [
+    "docs",
     "scripts",
-    "website",
     "apps/*",
     "packages/*",
     "third_party/*"
@@ -95,12 +95,12 @@
       "limit": "3.0KB"
     },
     {
-      "path": "./packages/cli/dist/index.js",
-      "limit": "6.0KB"
+      "path": "./packages/config/dist/index.js",
+      "limit": "1MB"
     },
     {
-      "path": "./packages/ui/dist/index.js",
-      "limit": "500B"
+      "path": "./packages/cli/dist/index.js",
+      "limit": "6.0KB"
     },
     {
       "path": "./packages/utils/dist/index.js",
