--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build
         run: pnpm run build
 
-  docs:build:
+  docs-build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
