chore: initial refactoring completed but still it's WIP

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,7 +36,10 @@
     "dev": "tsx ./src/index.ts -v",
     "docs:preview": "sirv docs",
     "docs:build": "typedoc src/index.ts",
-    "test:cli": "pnpm link . && pnpm templ -v"
+    "test": "vitest run",
+    "test:ci": "CI=true vitest run",
+    "test:cli": "pnpm link . && pnpm templ -v",
+    "test:watch": "vitest run --watch"
   },
   "sideEffects": true,
   "types": "./dist/index.d.ts",
@@ -50,7 +53,9 @@
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "tsx": "^3.12.7",
-    "typedoc": "^0.24.8"
+    "typedoc": "^0.24.8",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.34.2"
   },
   "cliname": "TEMPL"
 }
