--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -32,13 +32,18 @@
     "clean": "rimraf .turbo dist docs",
     "docs:preview": "sirv docs",
     "docs:build": "typedoc src/index.ts",
-    "dev": "tsup ./src/index.ts --watch"
+    "dev": "tsup ./src/index.ts --watch",
+    "test": "vitest run",
+    "test:ci": "CI=true vitest run",
+    "test:watch": "vitest run --watch"
   },
   "types": "./dist/index.d.ts",
   "devDependencies": {
     "deepmerge": "^4.3.1",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
-    "typedoc": "^0.24.8"
+    "typedoc": "^0.24.8",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.34.2"
   }
 }
