--- a/packages/config/turbo.json
+++ b/packages/config/turbo.json
@@ -1,6 +1,12 @@
 {
   "extends": ["//"],
   "pipeline": {
-    "build": {}
+    "build": {},
+    "test": {
+      "dependsOn": ["build"]
+    },
+    "test:ci": {
+      "dependsOn": ["build"]
+    }
   }
 }
