--- a/packages/utils/turbo.json
+++ b/packages/utils/turbo.json
@@ -3,6 +3,12 @@
   "pipeline": {
     "build": {
       "dependsOn": ["@templ/config#build"]
+    },
+    "test": {
+      "dependsOn": ["build"]
+    },
+    "test:ci": {
+      "dependsOn": ["build"]
     }
   }
 }
