--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "nr clean && nr deps:fresh && nr build && nr docs:build && nr format && nr changelog && nr size-limit && nr lint && nr test",
+    "all": "nr clean && nr deps:fresh && nr build && nr docs:build && nr format && nr changelog && nr size-limit && nr lint && nr test && nr test:cli",
     "build": "turbo run build --filter='./packages/*'",
     "clean": "rimraf .turbo .eslintcache .pnpm-store coverage && nr -r clean",
     "clean:nm": "nr -C scripts clean:nm",
@@ -24,10 +24,9 @@
     "lint:spell": "cspell .",
     "prepare": "husky install",
     "size-limit": "size-limit",
-    "test": "nr test:ci && nr test:cli",
-    "test:ci": "CI=true vitest run -r packages",
+    "test": "turbo run test --filter='./packages/*'",
+    "test:ci": "turbo run test:ci --filter='./packages/*'",
     "test:cli": "turbo run --filter=cli test:cli",
-    "test:watch": "vitest run -r packages --watch",
     "changelog": "auto-changelog -p"
   },
   "sideEffects": true,
@@ -46,36 +45,36 @@
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
     "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
-    "@types/node": "^20.4.10",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "@vitest/coverage-v8": "^0.34.1",
-    "@vitest/ui": "^0.34.1",
+    "@types/node": "^20.5.1",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "@vitest/coverage-v8": "^0.34.2",
+    "@vitest/ui": "^0.34.2",
     "auto-changelog": "^2.4.0",
     "cspell": "^7.0.0",
     "envinfo": "^7.10.0",
     "eslint": "^8.47.0",
     "eslint-define-config": "^1.23.0",
-    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-regexp": "^1.15.0",
-    "happy-dom": "^10.9.0",
+    "happy-dom": "^10.10.4",
     "husky": "^8.0.3",
     "pnpm": "^8.6.12",
-    "prettier": "^3.0.1",
+    "prettier": "^3.0.2",
     "prettier-package-json": "^2.8.0",
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.7",
     "serialize-error": "^11.0.1",
     "size-limit": "^8.2.6",
-    "snyk": "^1.1200.0",
+    "snyk": "^1.1203.0",
     "taze": "^0.11.2",
     "tsup": "^7.2.0",
     "turbo": "^1.10.12",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.1"
+    "vitest": "^0.34.2"
   },
   "engines": {
     "node": ">=16",
