--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node_version: [16, 18]
+        node_version: [18]
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -76,7 +76,9 @@ jobs:
       - name: Install
         run: pnpm i --no-frozen-lockfile
       - name: Test CLI
-        run: pnpm run test:cli
+        run: |
+          pnpm run build
+          pnpm run test:cli
 
   snyk:
     runs-on: ubuntu-latest
