--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build
         run: pnpm run build
 
-  docs-build:
+  docs_build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -55,12 +55,36 @@ jobs:
         run: |
           pnpm run build
           pnpm run test:ci
-      - name: Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      # - name: Codecov
+      #   uses: codecov/codecov-action@v3
+      #   env:
+      #     CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-  test-cli:
+  coverage_report:
+    name: Generate templ coverage report
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - uses: ./.github/actions/setup-node
+    - name: Install
+      run: pnpm i --no-frozen-lockfile
+    - name: Test
+      run: pnpm run copy:lcov
+    - name: Setup LCOV
+      uses: hrishikesh-kadam/setup-lcov@v1
+    - name: Report code coverage
+      uses: zgosalvez/github-actions-report-lcov@v3
+      with:
+        coverage-files: coverage/*.lcov.info
+        minimum-coverage: 90
+        artifact-name: templ-code-coverage-report
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        working-directory: ./
+        update-comment: true
+
+  test_cli:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
     strategy:
