--- a/scripts/package.json
+++ b/scripts/package.json
@@ -17,12 +17,15 @@
   "scripts": {
     "clean": "rimraf .turbo",
     "clean:nm": "node commander.js cleanup",
-    "lint:md": "node markdownlint.js"
+    "lint:md": "node markdownlint.js",
+    "copy:lcov": "node copy-lcov.js"
   },
   "devDependencies": {
     "del": "^7.0.0",
     "fs-extra": "^11.1.1",
     "glob": "^10.3.3",
+    "lcov": "^1.16.0",
+    "lcov-parse": "^1.0.0",
     "markdownlint": "^0.29.0",
     "ora": "^7.0.1",
     "rimraf": "^5.0.1",
