--- a/packages/config/turbo.json
+++ b/packages/config/turbo.json
@@ -3,9 +3,11 @@
   "pipeline": {
     "build": {},
     "test": {
+      "cache": false,
       "dependsOn": ["build"]
     },
     "test:ci": {
+      "cache": false,
       "dependsOn": ["build"]
     }
   }
