--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,29 +78,28 @@ jobs:
       - name: Test CLI
         run: pnpm run test:cli
 
-  coverage_report:
-    name: Generate templ coverage report
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - uses: ./.github/actions/setup-node
-    - name: Install
-      run: pnpm i --no-frozen-lockfile
-    - name: Test
-      run: pnpm run copy:lcov
-    - name: Setup LCOV
-      uses: hrishikesh-kadam/setup-lcov@v1
-    - name: Report code coverage
-      uses: zgosalvez/github-actions-report-lcov@v3
-      with:
-        coverage-files: coverage/*.lcov.info
-        minimum-coverage: 90
-        artifact-name: templ-code-coverage-report
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        working-directory: ./
-        update-comment: true
+  # coverage_report:
+  #   needs: test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v3
+  #   - uses: ./.github/actions/setup-node
+  #   - name: Install
+  #     run: pnpm i --no-frozen-lockfile
+  #   - name: Coverage lcov
+  #     run: pnpm run coverage:lcov
+  #   - name: Setup LCOV
+  #     uses: hrishikesh-kadam/setup-lcov@v1
+  #   - name: Report code coverage
+  #     uses: zgosalvez/github-actions-report-lcov@v3
+  #     with:
+  #       coverage-files: coverage/*.lcov.info
+  #       minimum-coverage: 90
+  #       artifact-name: templ-code-coverage-report
+  #       github-token: ${{ secrets.GITHUB_TOKEN }}
+  #       working-directory: ./
+  #       update-comment: true
 
   snyk:
     runs-on: ubuntu-latest
