--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "scripts": {
     "all": "nr clean && nr deps:fresh && nr build && nr docs:build && nr format && nr changelog && nr size-limit && nr lint && nr test && nr test:cli && nr update:third_party",
     "build": "turbo run build --filter='./packages/*'",
+    "coverage:lcov": "pnpm run -C scripts coverage:lcov",
     "clean": "rimraf .turbo .eslintcache .pnpm-store coverage && nr -r clean",
     "clean:nm": "nr -C scripts clean:nm",
+    "changelog": "auto-changelog -p",
+    "create:pkg": "nr -C scripts create:pkg",
     "deps:fresh": "taze -r -w -i",
     "dev": "turbo run dev --filter='./packages/*'",
     "docs:build": "turbo run docs:build",
@@ -20,24 +23,23 @@
     "preinstall": "npx only-allow pnpm",
     "lint": "nr eslint && nr lint:spell && nr lint:secret && nr lint:md",
     "lint:md": "nr -C scripts lint:md",
-    "update:third_party": "nr -C scripts update:third_party",
     "lint:secret": "secretlint \"**/*\"",
     "lint:spell": "cspell .",
-    "copy:lcov": "pnpm run -C scripts copy:lcov",
     "prepare": "husky install",
     "size-limit": "size-limit",
     "test": "turbo run test --filter='./packages/*'",
     "test:ci": "turbo run test:ci --filter='./packages/*'",
     "test:cli": "turbo run --filter=cli test:cli",
-    "changelog": "auto-changelog -p"
+    "update:git:third_party": "nr -C scripts update:git:third_party"
   },
   "sideEffects": true,
   "workspaces": [
-    "docs",
     "scripts",
+    "website",
     "apps/*",
     "packages/*",
-    "third_party/*"
+    "third_party/*",
+    "tools/*"
   ],
   "devDependencies": {
     "@antfu/ni": "^0.21.5",
@@ -48,12 +50,12 @@
     "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
     "@types/node": "^20.5.1",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "@vitest/coverage-v8": "^0.34.2",
     "@vitest/ui": "^0.34.2",
     "auto-changelog": "^2.4.0",
-    "cspell": "^7.0.0",
+    "cspell": "^7.0.1",
     "envinfo": "^7.10.0",
     "eslint": "^8.47.0",
     "eslint-define-config": "^1.23.0",
@@ -70,7 +72,7 @@
     "secretlint": "^7.0.7",
     "serialize-error": "^11.0.1",
     "size-limit": "^8.2.6",
-    "snyk": "^1.1203.0",
+    "snyk": "^1.1205.0",
     "taze": "^0.11.2",
     "tsup": "^7.2.0",
     "turbo": "^1.10.12",
