--- a/packages/cli/turbo.json
+++ b/packages/cli/turbo.json
@@ -6,9 +6,11 @@
       "outputs": ["dist/**"]
     },
     "test": {
+      "cache": false,
       "dependsOn": ["build"]
     },
     "test:ci": {
+      "cache": false,
       "dependsOn": ["build"]
     },
     "test:cli": {
