--- a/website/package.json
+++ b/website/package.json
@@ -31,23 +31,14 @@
   "dependencies": {
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
-    "@docusaurus/theme-classic": "^2.4.1",
-    "@mdx-js/react": "^2.3.0",
-    "@templ/config": "workspace:^",
-    "clsx": "^2.0.0",
+    "@mdx-js/react": "^1.6.22",
+    "clsx": "^1.2.1",
     "prism-react-renderer": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1",
-    "@docusaurus/types": "^2.4.1",
-    "@tsconfig/docusaurus": "^2.0.0",
-    "polka": "^0.5.2",
-    "rimraf": "^5.0.1",
-    "serve-static": "^1.15.0",
-    "tempura": "^0.4.0",
-    "typescript": "^5.1.6"
+    "@docusaurus/module-type-aliases": "2.4.1"
   },
   "browserslist": {
     "production": [
