--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "nr clean && nr deps:fresh && nr build && nr docs:build && nr format && nr changelog && nr size-limit && nr lint && nr test && nr test:cli && nr update:third_party",
+    "all": "nr clean && nr deps:fresh && nr build && nr docs:build && nr format && nr changelog && nr size-limit && nr lint && nr test && nr test:cli && nr third_party:git:update",
     "build": "turbo run build --filter='./packages/*'",
     "coverage:lcov": "pnpm run -C scripts coverage:lcov",
     "clean": "rimraf .turbo .eslintcache .pnpm-store coverage && nr -r clean",
@@ -30,7 +30,7 @@
     "test": "turbo run test --filter='./packages/*'",
     "test:ci": "turbo run test:ci --filter='./packages/*'",
     "test:cli": "turbo run --filter=cli test:cli",
-    "update:git:third_party": "nr -C scripts update:git:third_party"
+    "third_party:git:update": "nr -C scripts third_party:git:update"
   },
   "sideEffects": true,
   "workspaces": [
@@ -49,11 +49,11 @@
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
     "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
-    "@types/node": "^20.5.4",
+    "@types/node": "^20.5.6",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
-    "@vitest/coverage-v8": "^0.34.2",
-    "@vitest/ui": "^0.34.2",
+    "@vitest/coverage-v8": "^0.34.3",
+    "@vitest/ui": "^0.34.3",
     "auto-changelog": "^2.4.0",
     "cspell": "^7.0.1",
     "envinfo": "^7.10.0",
@@ -78,7 +78,7 @@
     "turbo": "^1.10.13",
     "typescript": "^5.2.2",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.2"
+    "vitest": "^0.34.3"
   },
   "engines": {
     "node": ">=16",
