--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -39,11 +39,12 @@
   },
   "types": "./dist/index.d.ts",
   "devDependencies": {
+    "@templ/tsconfig": "workspace:^",
     "deepmerge": "^4.3.1",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "typedoc": "^0.24.8",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.2"
+    "vitest": "^0.34.3"
   }
 }
