--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,11 +40,12 @@
   "types": "./dist/index.d.ts",
   "devDependencies": {
     "@templ/config": "workspace:^",
+    "@templ/tsconfig": "workspace:^",
     "@templ/utils": "workspace:^",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "typedoc": "^0.24.8",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.2"
+    "vitest": "^0.34.3"
   }
 }
