--- a/packages/core/turbo.json
+++ b/packages/core/turbo.json
@@ -4,6 +4,8 @@
     "build": {
       "dependsOn": ["@templ/config#build", "@templ/utils#build"]
     },
+    "eslint": {},
+    "eslint:fix": {},
     "test": {
       "cache": false,
       "dependsOn": ["build"]
