--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -17,7 +17,9 @@
     "*.js"
   ],
   "scripts": {
-    "lint": "eslint . --config=index.js"
+    "clean": "rimraf .turbo",
+    "eslint": "eslint . --config=index.js",
+    "eslint:fix": "eslint . --config=index.js --fix"
   },
   "peerDependencies": {
     "eslint": "^8.47.0",
@@ -25,13 +27,14 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "npm:eslint-plugin-i@2.28.0-2",
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -42,6 +45,8 @@
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
-    "eslint": "^8.47.0"
+    "eslint": "^8.48.0",
+    "prettier": "^3.0.2",
+    "rimraf": "^5.0.1"
   }
 }
