--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
     "all": "nr clean && nr deps:fresh && nr build && nr docs:build && nr format && nr changelog && nr size-limit && nr lint && nr test && nr test:cli && nr third_party:git:update",
     "build": "turbo run build --filter='./packages/*'",
     "coverage:lcov": "pnpm run -C scripts coverage:lcov",
-    "clean": "rimraf .turbo .eslintcache .pnpm-store coverage && nr -r clean",
+    "clean": "rimraf .turbo .pnpm-store coverage && nr -r clean",
     "clean:nm": "nr -C scripts clean:nm",
     "changelog": "auto-changelog -p",
     "create:pkg": "nr -C scripts create:pkg",
     "deps:fresh": "taze -r -w -i",
     "dev": "turbo run dev --filter='./packages/*'",
     "docs:build": "turbo run docs:build",
-    "eslint": "eslint --cache --fix .",
     "format": "prettier --write --cache .",
     "preinstall": "npx only-allow pnpm",
-    "lint": "nr eslint && nr lint:spell && nr lint:secret && nr lint:md",
+    "lint": "turbo run eslint && nr lint:spell && nr lint:secret && nr lint:md",
     "lint:md": "nr -C scripts lint:md",
     "lint:secret": "secretlint \"**/*\"",
     "lint:spell": "cspell .",
@@ -49,30 +48,22 @@
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
     "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
-    "@types/node": "^20.5.6",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
+    "@types/node": "^20.5.7",
     "@vitest/coverage-v8": "^0.34.3",
     "@vitest/ui": "^0.34.3",
     "auto-changelog": "^2.4.0",
-    "cspell": "^7.0.1",
+    "cspell": "^7.1.1",
     "envinfo": "^7.10.0",
-    "eslint": "^8.47.0",
-    "eslint-define-config": "^1.23.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.0.2",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-regexp": "^1.15.0",
-    "happy-dom": "^10.11.0",
+    "happy-dom": "^10.11.1",
     "husky": "^8.0.3",
-    "pnpm": "^8.6.12",
+    "pnpm": "^8.7.0",
     "prettier": "^3.0.2",
     "prettier-package-json": "^2.8.0",
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.7",
-    "serialize-error": "^11.0.1",
+    "serialize-error": "^11.0.2",
     "size-limit": "^8.2.6",
-    "snyk": "^1.1206.0",
+    "snyk": "^1.1207.0",
     "taze": "^0.11.2",
     "tsup": "^7.2.0",
     "turbo": "^1.10.13",
@@ -91,7 +82,7 @@
     "unreleased": true,
     "commitLimit": false
   },
-  "packageManager": "pnpm@8.6.12",
+  "packageManager": "pnpm@8.7.0",
   "size-limit": [
     {
       "path": "./packages/core/dist/index.js",
