--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -33,6 +33,8 @@
     "dev": "tsup ./src/index.ts --watch",
     "docs:preview": "sirv docs",
     "docs:build": "typedoc src/index.ts",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint . --fix",
     "test": "vitest run",
     "test:ci": "CI=true vitest run",
     "test:watch": "vitest run --watch"
@@ -40,7 +42,9 @@
   "types": "./dist/index.d.ts",
   "devDependencies": {
     "@templ/config": "workspace:^",
+    "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
+    "eslint": "^8.48.0",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "typedoc": "^0.24.8"
