--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,11 @@
   "$schema": "https://turborepo.org/schema.json",
   "baseBranch": "origin/main",
   "pipeline": {
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"],
+      "outputMode": "new-only"
+    },
     "dev": {
       "cache": false,
       "dependsOn": ["^dev", "^build"]
@@ -10,10 +15,7 @@
       "outputs": ["docs/**"],
       "outputMode": "new-only"
     },
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**"],
-      "outputMode": "new-only"
-    }
+    "eslint": {},
+    "eslint:fix": {}
   }
 }
