--- a/website/package.json
+++ b/website/package.json
@@ -14,31 +14,40 @@
     "url": "https://github.com/rjoydip/templ/issues"
   },
   "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
     "build": "docusaurus build",
-    "docs:build": "pnpm run build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids",
     "check": "tsc",
+    "clear": "docusaurus clear",
     "clean": "rimraf build .docusaurus .turbo",
-    "typedoc:preview": "node typedoc/preview.mjs"
+    "deploy": "docusaurus deploy",
+    "docusaurus": "docusaurus",
+    "docs:build": "pnpm run build",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint . --fix",
+    "serve": "docusaurus serve",
+    "start": "docusaurus start",
+    "swizzle": "docusaurus swizzle",
+    "typedoc:preview": "node typedoc/preview.mjs",
+    "typecheck": "tsc",
+    "write-translations": "docusaurus write-translations",
+    "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.1",
-    "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/preset-classic": "^2.4.1",
+    "@docusaurus/theme-classic": "^2.4.1",
     "@mdx-js/react": "^1.6.22",
+    "@templ/eslint-config": "workspace:^",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1"
+    "@docusaurus/module-type-aliases": "^2.4.1",
+    "@docusaurus/types": "^2.4.1",
+    "@tsconfig/docusaurus": "^2.0.0",
+    "eslint": "^8.48.0",
+    "typescript": "^5.2.2"
   },
   "browserslist": {
     "production": [
