--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "sideEffects": true,
   "workspaces": [
+    "docs",
     "scripts",
-    "website",
     "apps/*",
     "packages/*",
     "third_party/*",
@@ -52,12 +52,12 @@
     "@vitest/coverage-v8": "^0.34.3",
     "@vitest/ui": "^0.34.3",
     "auto-changelog": "^2.4.0",
-    "cspell": "^7.1.1",
+    "cspell": "^7.2.0",
     "envinfo": "^7.10.0",
-    "happy-dom": "^10.11.1",
+    "happy-dom": "^10.11.2",
     "husky": "^8.0.3",
     "pnpm": "^8.7.0",
-    "prettier": "^3.0.2",
+    "prettier": "^3.0.3",
     "prettier-package-json": "^2.8.0",
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.7",
@@ -72,7 +72,7 @@
     "vitest": "^0.34.3"
   },
   "engines": {
-    "node": ">=16",
+    "node": ">=18",
     "npm": ">=8",
     "shell": "bash"
   },
