--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,14 @@
       "outputMode": "new-only"
     },
     "eslint": {},
-    "eslint:fix": {}
+    "eslint:fix": {},
+    "test": {
+      "cache": false,
+      "dependsOn": ["build"]
+    },
+    "test:ci": {
+      "cache": false,
+      "dependsOn": ["build"]
+    }
   }
 }
