--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "nr clean && nr deps:fresh && nr build && nr docs:build && nr format && nr changelog && nr size-limit && nr lint && nr test && nr test:cli && nr third_party:git:update",
+    "all": "nr clean && nr deps:fresh && nr build && nr docs:build && nr format && nr changelog && nr size:limit && nr lint && nr test && nr test:cli && nr third_party:git:update",
     "build": "turbo run build --filter='./packages/*'",
     "coverage:lcov": "pnpm run -C scripts coverage:lcov",
     "clean": "rimraf .turbo .pnpm-store coverage && nr -r clean",
@@ -25,7 +25,7 @@
     "lint:secret": "secretlint \"**/*\"",
     "lint:spell": "cspell .",
     "prepare": "husky install",
-    "size-limit": "size-limit",
+    "size:limit": "turbo run size:limit",
     "test": "turbo run test --filter='./packages/*'",
     "test:ci": "turbo run test:ci --filter='./packages/*'",
     "test:cli": "turbo run --filter=cli test:cli",
@@ -46,7 +46,6 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@preact/preset-vite": "^2.5.0",
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
-    "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
     "@types/node": "^20.5.7",
     "@vitest/coverage-v8": "^0.34.3",
@@ -62,7 +61,6 @@
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.7",
     "serialize-error": "^11.0.2",
-    "size-limit": "^8.2.6",
     "snyk": "^1.1207.0",
     "taze": "^0.11.2",
     "tsup": "^7.2.0",
@@ -83,24 +81,6 @@
     "commitLimit": false
   },
   "packageManager": "pnpm@8.7.0",
-  "size-limit": [
-    {
-      "path": "./packages/core/dist/index.js",
-      "limit": "3.0KB"
-    },
-    {
-      "path": "./packages/config/dist/index.js",
-      "limit": "1MB"
-    },
-    {
-      "path": "./packages/cli/dist/index.js",
-      "limit": "6.0KB"
-    },
-    {
-      "path": "./packages/utils/dist/index.js",
-      "limit": "600B"
-    }
-  ],
   "stackblitz": {
     "startCommand": "nr dev"
   }
