--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,7 @@
     "docs:build": "typedoc src/index.ts",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
+    "size:limit": "size-limit",
     "test": "vitest run",
     "test:ci": "CI=true vitest run",
     "test:watch": "vitest run --watch"
@@ -41,14 +42,22 @@
   "sideEffects": true,
   "types": "./dist/index.d.ts",
   "devDependencies": {
+    "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
     "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
     "@templ/utils": "workspace:^",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
+    "size-limit": "^8.2.6",
     "typedoc": "^0.25.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.3"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "dist/index.js",
+      "limit": "100B"
+    }
+  ]
 }
