--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -28,17 +28,17 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsup && pnpm run typedoc",
     "clean": "rimraf .turbo dist docs coverage",
     "dev": "tsup ./src/index.ts --watch",
-    "docs:preview": "sirv docs",
-    "docs:build": "typedoc src/index.ts",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "size:limit": "size-limit",
     "test": "vitest run",
     "test:ci": "CI=true vitest run",
-    "test:watch": "vitest run --watch"
+    "test:watch": "vitest run --watch",
+    "typedoc": "typedoc src/index.ts",
+    "typedoc:preview": "sirv docs"
   },
   "types": "./dist/index.d.ts",
   "devDependencies": {
