chore: drop nr and removed unnecessery root packages

--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "nr clean && nr deps:fresh && nr build && nr format && nr changelog && nr size:limit && nr lint && nr test:ci && nr test:cli && nr third_party:git:update",
+    "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm format && pnpm changelog && pnpm size:limit && pnpm lint && pnpm test:ci && pnpm test:cli",
     "build": "turbo run build --filter='./packages/*'",
-    "coverage:lcov": "pnpm run -C scripts coverage:lcov",
-    "clean": "rimraf .turbo .pnpm-store coverage && nr -r clean",
-    "clean:nm": "nr -C scripts clean:nm",
+    "coverage:lcov": "pnpm -C scripts coverage:lcov",
+    "clean": "rimraf .turbo .pnpm-store coverage && pnpm -r clean",
+    "clean:nm": "pnpm -C scripts clean:nm",
     "changelog": "auto-changelog -p",
-    "create:pkg": "nr -C scripts create:pkg",
+    "create:pkg": "pnpm -C scripts create:pkg",
     "deps:fresh": "taze -r -w -i",
     "dev": "turbo run dev --filter='./packages/*'",
     "format": "prettier --write --cache .",
     "preinstall": "npx only-allow pnpm",
-    "lint": "turbo run eslint && nr lint:spell && nr lint:secret && nr lint:md",
-    "lint:md": "nr -C scripts lint:md",
+    "lint": "turbo run eslint && pnpm lint:spell && pnpm lint:secret && pnpm lint:md",
+    "lint:md": "pnpm -C scripts lint:md",
     "lint:secret": "secretlint \"**/*\"",
     "lint:spell": "cspell .",
     "prepare": "husky install",
@@ -28,7 +28,7 @@
     "test": "turbo run test --filter='./packages/*'",
     "test:ci": "turbo run test:ci --filter='./packages/*'",
     "test:cli": "turbo run --filter=cli test:cli",
-    "third_party:git:update": "nr -C scripts third_party:git:update"
+    "third_party:git:update": "pnpm -C scripts third_party:git:update"
   },
   "sideEffects": true,
   "workspaces": [
@@ -40,19 +40,13 @@
     "tools/*"
   ],
   "devDependencies": {
-    "@antfu/ni": "^0.21.6",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@preact/preset-vite": "^2.5.0",
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
     "@templ/config": "workspace:^",
-    "@types/node": "^20.5.7",
-    "@vitest/coverage-v8": "^0.34.3",
-    "@vitest/ui": "^0.34.3",
     "auto-changelog": "^2.4.0",
     "cspell": "^7.2.0",
     "envinfo": "^7.10.0",
-    "happy-dom": "^10.11.2",
     "husky": "^8.0.3",
     "nano-staged": "^0.8.0",
     "pnpm": "^8.7.1",
@@ -60,15 +54,10 @@
     "prettier-package-json": "^2.8.0",
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.7",
-    "serialize-error": "^11.0.2",
     "snyk": "^1.1209.0",
     "stylelint": "^15.10.3",
     "taze": "^0.11.2",
-    "tsup": "^7.2.0",
-    "turbo": "^1.10.13",
-    "typescript": "^5.2.2",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.3"
+    "turbo": "^1.10.13"
   },
   "engines": {
     "node": ">=18",
