--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,7 +32,7 @@
     "templ.mjs"
   ],
   "scripts": {
-    "build": "tsup && pnpm run typedoc",
+    "build": "tsup && pnpm typedoc",
     "clean": "rimraf .turbo dist docs coverage",
     "dev": "node --loader tsx ./src/index.ts -v",
     "eslint": "eslint .",
@@ -56,11 +56,14 @@
     "@templ/config": "workspace:^",
     "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
+    "@types/node": "^20.5.7",
+    "@vitest/coverage-v8": "^0.34.3",
     "eslint": "^8.48.0",
     "find-monorepo-root": "^1.0.3",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "size-limit": "^8.2.6",
+    "tsup": "^7.2.0",
     "tsx": "^3.12.7",
     "typedoc": "^0.25.0",
     "vite-tsconfig-paths": "^4.2.0",
