--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -24,6 +24,7 @@
     "test:watch": "vitest run --watch"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^0.34.3",
     "rimraf": "^5.0.1",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.3"
