chore: lots of things changed, build module created, third_party/web-check pulled, tsconfig changes

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "snyk": "^1.1209.0",
     "stylelint": "^15.10.3",
     "taze": "^0.11.2",
-    "turbo": "^1.10.13"
+    "turbo": "^1.10.13",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=18",
