chore: build package added, modified othes things

--- a/packages/buildx/tsconfig.json
+++ b/packages/buildx/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@templ/build": ["src/package.ts"]
+      "@templ/build": ["src/build-package.ts"]
     }
   },
   "include": ["src"],
