--- a/packages/buildx/package.json
+++ b/packages/buildx/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "@templ/build",
+  "name": "@templ/buildx",
   "type": "module",
   "version": "0.0.0",
   "private": true,
   "description": "TEMPL package build",
   "license": "MIT",
-  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/build#readme",
+  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/buildx#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rjoydip/templ.git",
-    "directory": "packages/build"
+    "directory": "packages/buildx"
   },
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
   "files": [],
   "bin": {
-    "build-package": "./src/package.ts"
+    "build-package": "./src/build-package.ts"
   },
   "scripts": {
-    "build": "pnpm typedoc",
+    "docs:build": "pnpm typedoc",
     "clean": "rimraf .turbo dist docs coverage",
     "dev": "tsx ./src/index.ts --watch",
     "eslint": "eslint .",
@@ -35,21 +35,23 @@
     "@size-limit/file": "^8.2.6",
     "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
-    "@types/node": "^20.5.7",
+    "@templ/utils": "workspace:^",
+    "@types/node": "^20.5.8",
     "@vitest/coverage-v8": "^0.34.3",
     "eslint": "^8.48.0",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "size-limit": "^8.2.6",
-    "tsx": "^3.12.7",
     "typedoc": "^0.24.8",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.2"
+    "vitest": "^0.34.3"
   },
   "dependencies": {
+    "deepmerge": "^4.3.1",
     "esbuild": "^0.19.2",
     "mri": "^1.2.0",
-    "totalist": "^3.0.1"
+    "totalist": "^3.0.1",
+    "tsx": "^3.12.8"
   },
   "size-limit": []
 }
