--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -28,7 +28,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "build-package && pnpm typedoc",
+    "build": "tsup && pnpm typedoc",
     "clean": "rimraf .turbo dist docs coverage",
     "dev": "tsx ./src/index.ts --watch",
     "eslint": "eslint .",
@@ -43,18 +43,17 @@
   "types": "./dist/index.d.ts",
   "devDependencies": {
     "@size-limit/file": "^8.2.6",
-    "@templ/build": "workspace:^",
     "@templ/config": "workspace:^",
     "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.5.8",
     "@vitest/coverage-v8": "^0.34.3",
     "eslint": "^8.48.0",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "size-limit": "^8.2.6",
     "tsup": "^7.2.0",
-    "tsx": "^3.12.7",
+    "tsx": "^3.12.8",
     "typedoc": "^0.25.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.3"
