--- a/packages/buildx/turbo.json
+++ b/packages/buildx/turbo.json
@@ -1,7 +1,5 @@
 {
-  "extends": [
-    "//"
-  ],
+  "extends": ["//"],
   "pipeline": {
     "docs:build": {
       "dependsOn": ["@templ/utils#build"]
