--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm format && pnpm changelog && pnpm size:limit && pnpm lint && pnpm test:ci && pnpm test:cli",
     "build": "turbo run build --filter='./packages/*'",
+    "docs:build": "turbo run docs:build",
     "coverage:lcov": "pnpm -C scripts coverage:lcov",
     "clean": "rimraf .turbo .pnpm-store coverage && pnpm -r clean",
     "clean:nm": "pnpm -C scripts clean:nm",
@@ -54,7 +55,7 @@
     "prettier-package-json": "^2.8.0",
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.7",
-    "snyk": "^1.1211.0",
+    "snyk": "^1.1212.0",
     "stylelint": "^15.10.3",
     "taze": "^0.11.2",
     "turbo": "^1.10.13",
