--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -28,9 +28,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup && pnpm typedoc",
+    "build": "tsup",
     "clean": "rimraf .turbo dist docs coverage",
     "dev": "tsx ./src/index.ts --watch",
+    "docs:build": "pnpm typedoc",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "size:limit": "size-limit",
