--- a/turbo.json
+++ b/turbo.json
@@ -1,20 +1,4 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "baseBranch": "origin/main",
-  "pipeline": {
-    "build": {},
-    "eslint": {},
-    "eslint:fix": {},
-    "size:limit": {
-      "dependsOn": ["^build"]
-    },
-    "test": {
-      "cache": false,
-      "dependsOn": ["^build"]
-    },
-    "test:ci": {
-      "cache": false,
-      "dependsOn": ["^build"]
-    }
-  }
+  "baseBranch": "origin/main"
 }
